Refactor authentication logic and enhance cookie handling in UserController